--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "morgan": "~1.0.0",
     "socket.io": "",
     "static-favicon": "~1.0.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5"
   }
 }
