--- a/server/public/bower.json
+++ b/server/public/bower.json
@@ -24,6 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "socket.io-client": "~1.0.6"
+    "socket.io-client": "~1.0.6",
+    "Bootflat": "~2.0.3"
   }
 }
