--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "ejs": "~0.8.5",
     "express": "~4.2.0",
     "morgan": "~1.0.0",
+    "put": "0.0.6",
     "socket.io": "",
     "static-favicon": "~1.0.0"
   },
